--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Header from '../components/Header.astro';
+import Sidebar from '../components/Sidebar.astro';
+import Footer from '../components/Footer.astro';
+import Dashboard from '../components/Dashboard';
 ---
 
-<Layout>
-	<Welcome />
-</Layout>
+<BaseLayout>
+  <Header />
+  <main class="oma-main">
+    <Sidebar />
+    <div class="oma-content">
+      <Dashboard client:load />
+    </div>
+  </main>
+  <Footer />
+</BaseLayout>
